cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark__cfn_templates__Tianyi2__IRIS__data__cloudformation_collected_templates_new__template_05418_vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Deploy a VPC with 2 AZ, IGW, and NGW.
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Customer Resource Tags
        Parameters:
          - pmCustomer
          - pmProject
          - pmEnvironment
      - Label:
          default: VPC Configuration Parameters
        Parameters:
          - pmVpcRegion
          - pmAz1
          - pmAz2
          - pmVpcCidr
          - pmPubSubnet1Cidr
          - pmPubSubnet2Cidr
          - pmPriSubnet1Cidr
          - pmPriSubnet2Cidr
    ParameterLabels:
      pmCustomer:
        default: Enter Customer name
      pmProject:
        default: Enter Project name
      pmEnvironment:
        default: Enter Environment name
      pmVpcCidr:
        default: Enter VPC CIDR
      pmVpcRegion:
        default: Enter VPC region
      pmAz1:
        default: Enter VPC AZ1
      pmAz2:
        default: Enter VPC AZ2
      pmPubSubnet1Cidr:
        default: Enter VPC public subnet1
      pmPubSubnet2Cidr:
        default: Enter VPC public subnet2
      pmPriSubnet1Cidr:
        default: Enter VPC private subnet1
      pmPriSubnet2Cidr:
        default: Enter VPC private subnet2
Parameters:
  pmCustomer:
    Type: String
    Default: ACME
  pmProject:
    Type: String
    Default: ACME-Networkiong-Demo
  pmEnvironment:
    Type: String
    Default: DEV
  pmVpcRegion:
    Type: String
    Default: us-east-1
  pmAz1:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1a
  pmAz2:
    Type: AWS::EC2::AvailabilityZone::Name
    Default: us-east-1b
  pmVpcCidr:
    Type: String
    Default: 11.0.0.0/16
  pmPubSubnet1Cidr:
    Type: String
    Default: 11.0.10.0/24
  pmPubSubnet2Cidr:
    Type: String
    Default: 11.0.20.0/24
  pmPriSubnet1Cidr:
    Type: String
    Default: 11.0.50.0/24
  pmPriSubnet2Cidr:
    Type: String
    Default: 11.0.60.0/24
Mappings: {}
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref 'pmVpcCidr'
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-VPC
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-IGW
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
  IGWAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'IGW'
  EIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NGW1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'EIP1.AllocationId'
      SubnetId: !Ref 'PublicSubnet1'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-NGW1
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
    DependsOn:
      - PublicRouteTable
  EIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  NGW2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt 'EIP2.AllocationId'
      SubnetId: !Ref 'PublicSubnet2'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-NGW2
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
    DependsOn:
      - PublicRouteTable
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPubSubnet1Cidr'
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Ref 'pmAz1'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Type
          Value: Public
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-${SubnetCidr}-${Az}
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
              SubnetCidr: !Ref 'pmPubSubnet1Cidr'
              Az: !Ref 'pmAz1'
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPriSubnet1Cidr'
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Ref 'pmAz1'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Type
          Value: Private
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-${SubnetCidr}-${Az}
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
              SubnetCidr: !Ref 'pmPriSubnet1Cidr'
              Az: !Ref 'pmAz1'
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPubSubnet2Cidr'
      MapPublicIpOnLaunch: true
      AvailabilityZone: !Ref 'pmAz2'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Type
          Value: Public
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-${SubnetCidr}-${Az}
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
              SubnetCidr: !Ref 'pmPubSubnet2Cidr'
              Az: !Ref 'pmAz2'
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref 'VPC'
      CidrBlock: !Ref 'pmPriSubnet2Cidr'
      MapPublicIpOnLaunch: false
      AvailabilityZone: !Ref 'pmAz2'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Type
          Value: Private
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-${SubnetCidr}-${Az}
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
              SubnetCidr: !Ref 'pmPriSubnet2Cidr'
              Az: !Ref 'pmAz2'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Type
          Value: Public
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-RT-Public
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: IGWAttach
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'IGW'
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet1'
      RouteTableId: !Ref 'PublicRouteTable'
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PublicSubnet2'
      RouteTableId: !Ref 'PublicRouteTable'
  Private1RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Type
          Value: Private
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-RT-Private1
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
  Private2RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
      Tags:
        - Key: Customer
          Value: !Ref 'pmCustomer'
        - Key: Project
          Value: !Ref 'pmProject'
        - Key: Environment
          Value: !Ref 'pmEnvironment'
        - Key: Type
          Value: Private
        - Key: Name
          Value: !Sub
            - ${Customer}-${Environment}-RT-Private2
            - Customer: !Ref 'pmCustomer'
              Environment: !Ref 'pmEnvironment'
  Private1Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'Private1RouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NGW1'
  Private2Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref 'Private2RouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      NatGatewayId: !Ref 'NGW2'
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet1'
      RouteTableId: !Ref 'Private1RouteTable'
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref 'PrivateSubnet2'
      RouteTableId: !Ref 'Private2RouteTable'
Outputs:
  Customer:
    Description: A reference to the customer attribute
    Value: !Ref 'pmCustomer'
  Project:
    Description: A reference to the project attribute
    Value: !Ref 'pmProject'
  Environment:
    Description: A reference to the environment attribute
    Value: !Ref 'pmEnvironment'
  Region:
    Description: A reference to the region attribute
    Value: !Ref 'pmVpcRegion'
  VPC:
    Description: A reference to the created VPC
    Value: !Ref 'VPC'
  PublicSubnets:
    Description: A list of the public subnets
    Value: !Join
      - ','
      - - !Ref 'PublicSubnet1'
        - !Ref 'PublicSubnet2'
  PrivateSubnets:
    Description: A list of the private subnets
    Value: !Join
      - ','
      - - !Ref 'PrivateSubnet1'
        - !Ref 'PrivateSubnet2'
  PublicSubnet1:
    Description: A reference to the public subnet in AZ1
    Value: !Ref 'PublicSubnet1'
  PublicSubnet2:
    Description: A reference to the public subnet in AZ2
    Value: !Ref 'PublicSubnet2'
  PrivateSubnet1:
    Description: A reference to the private subnet in AZ1
    Value: !Ref 'PrivateSubnet1'
  PrivateSubnet2:
    Description: A reference to the private subnet in AZ2
    Value: !Ref 'PrivateSubnet2'
